# WeKnora

./: .dockerignore  .env.example  .env.lite.example  .gitignore  CHANGELOG.md  Makefile  README.md  README_CN.md  README_JA.md  README_KO.md  deploy-acs.sh  docker-compose.yml  push-to-acs.sh
cli/: AGENTS.md
client/: agent_manage.go
config/prompt_templates/: agent_system_prompt.yaml  rewrite.yaml  system_prompt.yaml
docker/: Dockerfile.app  Dockerfile.docreader
docreader/: Makefile
docreader/proto/: docreader.proto
docs/: IM集成开发文档.md  QA.md  docs.go  swagger.json  swagger.yaml  数据源导入开发文档.md  部署到阿里云ECS备忘.md
frontend/: embed.html  index.html  package-lock.json  package.json
helm/: Chart.yaml  values-acs.yaml
internal/agent/: engine.go  engine_test.go  finalize.go  observe.go  observe_test.go  think.go
internal/container/: container.go
internal/datasource/: connector.go
internal/handler/: custom_agent.go  im.go  (+6 more)
mcp-gateway/: Dockerfile  pyproject.toml  requirements.txt
mcp-gateway/examples/: Dockerfile.mock-pricing  erp_service.yaml  gateway.env.example  mock_pricing_api.py  pricing_service.yaml
mcp-gateway/mcp_gateway/: __init__.py  auth.py  backend_client.py  errors.py  gateway_server.py  main.py  registry.py
mcp-gateway/mcp_gateway/config/: gateway.yaml
miniprogram/: app.json  app.wxss  package-lock.json  package.json  project.config.json
scripts/: build_frontend_dist.sh  deploy-aliyun.sh  deploy-backend.sh  deploy-common.sh  deploy-mcp-gateway.sh  deploy-ui.sh  dev.sh  map-query.sh  map_query.py  quick_build_app.sh  regenerate-map.sh
(+179 files in other folders)
